reconciler/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: euphrosyne-reconciler
  labels:
    app: orpheus-operator
    component: euphrosyne-reconciler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orpheus-operator
      component: euphrosyne-reconciler
  template:
    metadata:
      labels:
        app: orpheus-operator
        component: euphrosyne-reconciler
    spec:
      containers:
        - name: euphrosyne-reconciler
          image: phoevos/euphrosyne-reconciler:latest
          command:
            - /reconciler
          args:
            - --webex-bot-address
            - https://2861-109-175-214-148.ngrok-free.app
            - --recipe-timeout
            - "300"
          ports:
            - containerPort: 8080
      serviceAccountName: euphrosyne-reconciler
